Fix: Scrollbar is on top of gradient background

--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -1,8 +1,11 @@
 .this {
   display: flex;
   flex-direction: column;
+  width: var(--size-page-width);
+  margin: auto;
   padding: 0.5rem;
   gap: 0.5rem;
+  overflow-y: auto;
 }
 
 .searchBar {
