--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,8 @@
   --color-border: #555;
   --color-text: #eee;
 
+  --size-page-width: min(60rem, 100%);
+
   --material-bg: linear-gradient(0deg, var(--color-bg) 0%, #111 100%);
   --material-panel: linear-gradient(0deg, var(--color-panel) 0%, #333 100%);
 
@@ -51,18 +53,19 @@ html {
 /* Styling */
 body {
   display: flex;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   background: var(--color-bg);
   background: var(--material-bg);
   font-size: 1.2rem;
-  margin: auto;
-  width: min(60rem, 100%);
+}
 
-  & > * {
-    width: 100%;
-  }
+#root {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 
 * {
@@ -82,13 +85,11 @@ kbd {
   border: var(--style-border-input);
   border-radius: 0.4rem;
   background: var(--color-background);
+  font-size: 0.8em;
   font-weight: lighter;
   color: var(--color-text);
-  box-shadow:
-    0 -0.2rem 0.25rem var(--color-inner-border) inset,
-    0 0 0 0.1rem var(--color-outer-border);
+  box-shadow: 0 -0.2rem 0.25rem var(--color-inner-border) inset, 0 0 0 0.1rem var(--color-outer-border);
   user-select: none;
   line-height: 1;
   white-space: nowrap;
-  font-size: 0.8em;
 }
